--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ dsnTest=":memory:"
 env="dev"
 debug=true
 AutoMigrateDb=true
+
+kafkaBootstrapServers="kafka:9092"
+kafkaConsumerGroupId=codepix
+kafkaTransactionTopic="transactions"
+kafkaTransactionConfirmationTopic="transaction_confirmation"
